gen/com/tang/intellij/lua/comment/parser/LuaDocParser.java
// This is a generated file. Not intended for manual editing.
package com.tang.intellij.lua.comment.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.tang.intellij.lua.comment.psi.LuaDocTypes.*;
import static com.tang.intellij.lua.psi.LuaParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LuaDocParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return doc(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARR_TY, BOOLEAN_LITERAL_TY, FUNCTION_TY, GENERAL_TY,
      GENERIC_TABLE_INDEX_TY, GENERIC_TABLE_TY, GENERIC_TY, NUMBER_LITERAL_TY,
      PAR_TY, PRIMITIVE_TABLE_TY, SNIPPET_TY, STRING_LITERAL_TY,
      TABLE_TY, TY, UNION_TY),
  };

  /* ********************************************************** */
  // PRIVATE | PUBLIC | PROTECTED | TAG_NAME_PRIVATE | TAG_NAME_PUBLIC | TAG_NAME_PROTECTED
  public static boolean access_modifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "access_modifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ACCESS_MODIFIER, "<access modifier>");
    r = consumeToken(b, PRIVATE);
    if (!r) r = consumeToken(b, PUBLIC);
    if (!r) r = consumeToken(b, PROTECTED);
    if (!r) r = consumeToken(b, TAG_NAME_PRIVATE);
    if (!r) r = consumeToken(b, TAG_NAME_PUBLIC);
    if (!r) r = consumeToken(b, TAG_NAME_PROTECTED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // doc_item | STRING
  static boolean after_dash(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "after_dash")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = doc_item(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    exit_section_(b, l, m, r, false, LuaDocParser::eol_recover);
    return r;
  }

  /* ********************************************************** */
  // type_ref ('<' generic_param_list '>')? {
  // }
  public static boolean class_ref(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_ref")) return false;
    if (!nextTokenIs(b, "<class ref>", ID, TABLE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_REF, "<class ref>");
    r = type_ref(b, l + 1);
    r = r && class_ref_1(b, l + 1);
    r = r && class_ref_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('<' generic_param_list '>')?
  private static boolean class_ref_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_ref_1")) return false;
    class_ref_1_0(b, l + 1);
    return true;
  }

  // '<' generic_param_list '>'
  private static boolean class_ref_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_ref_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LT);
    r = r && generic_param_list(b, l + 1);
    r = r && consumeToken(b, GT);
    exit_section_(b, m, null, r);
    return r;
  }

  // {
  // }
  private static boolean class_ref_2(PsiBuilder b, int l) {
    return true;
  }

  /* ********************************************************** */
  // STRING_BEGIN? STRING?
  public static boolean comment_string(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMENT_STRING, "<comment string>");
    r = comment_string_0(b, l + 1);
    r = r && comment_string_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // STRING_BEGIN?
  private static boolean comment_string_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string_0")) return false;
    consumeToken(b, STRING_BEGIN);
    return true;
  }

  // STRING?
  private static boolean comment_string_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment_string_1")) return false;
    consumeToken(b, STRING);
    return true;
  }

  /* ********************************************************** */
  // union_ty | ty
  static boolean complex_ty(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complex_ty")) return false;
    boolean r;
    r = union_ty(b, l + 1);
    if (!r) r = ty(b, l + 1, -1);
    return r;
  }

  /* ********************************************************** */
  // (BLOCK_BEGIN EOL* (after_dash(EOL+ after_dash?)*)? EOL? BLOCK_END)|(DASHES after_dash?)?(EOL DASHES after_dash?)*
  static boolean doc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = doc_0(b, l + 1);
    if (!r) r = doc_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // BLOCK_BEGIN EOL* (after_dash(EOL+ after_dash?)*)? EOL? BLOCK_END
  private static boolean doc_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BLOCK_BEGIN);
    r = r && doc_0_1(b, l + 1);
    r = r && doc_0_2(b, l + 1);
    r = r && doc_0_3(b, l + 1);
    r = r && consumeToken(b, BLOCK_END);
    exit_section_(b, m, null, r);
    return r;
  }

  // EOL*
  private static boolean doc_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, EOL)) break;
      if (!empty_element_parsed_guard_(b, "doc_0_1", c)) break;
    }
    return true;
  }

  // (after_dash(EOL+ after_dash?)*)?
  private static boolean doc_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2")) return false;
    doc_0_2_0(b, l + 1);
    return true;
  }

  // after_dash(EOL+ after_dash?)*
  private static boolean doc_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = after_dash(b, l + 1);
    r = r && doc_0_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (EOL+ after_dash?)*
  private static boolean doc_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!doc_0_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc_0_2_0_1", c)) break;
    }
    return true;
  }

  // EOL+ after_dash?
  private static boolean doc_0_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = doc_0_2_0_1_0_0(b, l + 1);
    r = r && doc_0_2_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EOL+
  private static boolean doc_0_2_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EOL);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, EOL)) break;
      if (!empty_element_parsed_guard_(b, "doc_0_2_0_1_0_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // after_dash?
  private static boolean doc_0_2_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_2_0_1_0_1")) return false;
    after_dash(b, l + 1);
    return true;
  }

  // EOL?
  private static boolean doc_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_0_3")) return false;
    consumeToken(b, EOL);
    return true;
  }

  // (DASHES after_dash?)?(EOL DASHES after_dash?)*
  private static boolean doc_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = doc_1_0(b, l + 1);
    r = r && doc_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DASHES after_dash?)?
  private static boolean doc_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_0")) return false;
    doc_1_0_0(b, l + 1);
    return true;
  }

  // DASHES after_dash?
  private static boolean doc_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DASHES);
    r = r && doc_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // after_dash?
  private static boolean doc_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_0_0_1")) return false;
    after_dash(b, l + 1);
    return true;
  }

  // (EOL DASHES after_dash?)*
  private static boolean doc_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!doc_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "doc_1_1", c)) break;
    }
    return true;
  }

  // EOL DASHES after_dash?
  private static boolean doc_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, EOL, DASHES);
    r = r && doc_1_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // after_dash?
  private static boolean doc_1_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_1_1_0_2")) return false;
    after_dash(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '@' (tag_param
  //     | tag_alias
  //     | tag_suppress
  //     | tag_vararg
  //     | tag_return
  //     | tag_class
  //     | tag_field
  //     | tag_type
  //     | tag_not
  //     | tag_lan
  //     | tag_overload
  //     | tag_see
  //     | tag_def
  //     | access_modifier
  //     | tag_generic_list)
  static boolean doc_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_item")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && doc_item_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // tag_param
  //     | tag_alias
  //     | tag_suppress
  //     | tag_vararg
  //     | tag_return
  //     | tag_class
  //     | tag_field
  //     | tag_type
  //     | tag_not
  //     | tag_lan
  //     | tag_overload
  //     | tag_see
  //     | tag_def
  //     | access_modifier
  //     | tag_generic_list
  private static boolean doc_item_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_item_1")) return false;
    boolean r;
    r = tag_param(b, l + 1);
    if (!r) r = tag_alias(b, l + 1);
    if (!r) r = tag_suppress(b, l + 1);
    if (!r) r = tag_vararg(b, l + 1);
    if (!r) r = tag_return(b, l + 1);
    if (!r) r = tag_class(b, l + 1);
    if (!r) r = tag_field(b, l + 1);
    if (!r) r = tag_type(b, l + 1);
    if (!r) r = tag_not(b, l + 1);
    if (!r) r = tag_lan(b, l + 1);
    if (!r) r = tag_overload(b, l + 1);
    if (!r) r = tag_see(b, l + 1);
    if (!r) r = tag_def(b, l + 1);
    if (!r) r = access_modifier(b, l + 1);
    if (!r) r = tag_generic_list(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // !(EOL|BLOCK_END)
  static boolean eol_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eol_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eol_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EOL|BLOCK_END
  private static boolean eol_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eol_recover_0")) return false;
    boolean r;
    r = consumeToken(b, EOL);
    if (!r) r = consumeToken(b, BLOCK_END);
    return r;
  }

  /* ********************************************************** */
  // (tableField (',' tableField)* (',')?)?
  static boolean fieldList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList")) return false;
    fieldList_0(b, l + 1);
    return true;
  }

  // tableField (',' tableField)* (',')?
  private static boolean fieldList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = tableField(b, l + 1);
    r = r && fieldList_0_1(b, l + 1);
    r = r && fieldList_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' tableField)*
  private static boolean fieldList_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!fieldList_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fieldList_0_1", c)) break;
    }
    return true;
  }

  // ',' tableField
  private static boolean fieldList_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && tableField(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',')?
  private static boolean fieldList_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fieldList_0_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '<' generic_def (',' generic_def)* '>'
  static boolean function_generic(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic")) return false;
    if (!nextTokenIs(b, LT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LT);
    p = r; // pin = 1
    r = r && report_error_(b, generic_def(b, l + 1));
    r = p && report_error_(b, function_generic_2(b, l + 1)) && r;
    r = p && consumeToken(b, GT) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (',' generic_def)*
  private static boolean function_generic_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_generic_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_generic_2", c)) break;
    }
    return true;
  }

  // ',' generic_def
  private static boolean function_generic_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_generic_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && generic_def(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ID (':' complex_ty)?
  public static boolean function_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_PARAM, null);
    r = consumeToken(b, ID);
    p = r; // pin = 1
    r = r && function_param_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (':' complex_ty)?
  private static boolean function_param_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_1")) return false;
    function_param_1_0(b, l + 1);
    return true;
  }

  // ':' complex_ty
  private static boolean function_param_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && complex_ty(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (function_param ',')* ((function_param|vararg_param) |& ')')
  static boolean function_param_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param_list_0(b, l + 1);
    r = r && function_param_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (function_param ',')*
  private static boolean function_param_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_param_list_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_param_list_0", c)) break;
    }
    return true;
  }

  // function_param ','
  private static boolean function_param_list_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // (function_param|vararg_param) |& ')'
  private static boolean function_param_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_param_list_1_0(b, l + 1);
    if (!r) r = function_param_list_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // function_param|vararg_param
  private static boolean function_param_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1_0")) return false;
    boolean r;
    r = function_param(b, l + 1);
    if (!r) r = vararg_param(b, l + 1);
    return r;
  }

  // & ')'
  private static boolean function_param_list_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_param_list_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
